--- a/app/src/main/res/layout/fragment_notification1.xml
+++ b/app/src/main/res/layout/fragment_notification1.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
@@ -9,19 +10,20 @@
         android:layout_height="wrap_content"
         android:text="Clear all Notifications"
         android:id="@+id/clearNotification"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:textSize="16sp"
         android:textColor="#F44336"
         android:paddingTop="5dp"
         android:layout_marginBottom="8dp"
-        android:paddingRight="5dp" />
+        android:paddingEnd="5dp"
+        tools:ignore="RtlSymmetry" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_below="@id/clearNotification"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/clearNotification">
 
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -31,7 +33,7 @@
         android:layout_height="250dp"
         android:layout_centerInParent="true"
         android:layout_centerVertical="true"
-        android:alpha="0.5"
+        android:alpha="0.2"
         android:src="@drawable/notification_bell"
         app:civ_border_overlay="true" />
 
