--- a/app/src/main/res/layout/activity_post_photo.xml
+++ b/app/src/main/res/layout/activity_post_photo.xml
@@ -76,7 +76,7 @@
             android:layout_marginBottom="20dp"
             android:backgroundTint="@color/white"
 
-            android:hint="Enter and Interesting Title or Caption"
+            android:hint="Enter Caption"
             android:imeOptions="actionNext"
             android:inputType="textFilter"
             android:textColor="@color/black"
