--- a/app/src/main/res/layout-v21/activity_explore.xml
+++ b/app/src/main/res/layout-v21/activity_explore.xml
@@ -39,7 +39,7 @@
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
-        android:layout_height="10dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/relLayout1"
         android:visibility="visible" />
 
