--- a/app/src/main/res/layout/dialog_profile_link.xml
+++ b/app/src/main/res/layout/dialog_profile_link.xml
@@ -17,7 +17,6 @@
         android:text="Enter Your Profile Link"
         android:textColor="@color/scheme8"
         android:textSize="16sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,7 +28,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/grey_border_bottom"
+        android:background="@drawable/rectangular_border"
         android:hint="Enter link here"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,6 +44,7 @@
         android:layout_marginBottom="8dp"
         android:backgroundTint="@color/scheme8"
         android:text="ADD"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_comment" />
@@ -57,6 +57,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Cancel"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_comment" />
