--- a/app/src/main/res/layout/activity_post_video.xml
+++ b/app/src/main/res/layout/activity_post_video.xml
@@ -96,7 +96,6 @@
             android:layout_margin="10dp"
             android:orientation="horizontal"
             android:layout_centerHorizontal="true"
-            android:gravity="center"
             android:weightSum="3">
 
             <TextView
@@ -124,10 +123,9 @@
         </LinearLayout>
         <ImageView
             android:id="@+id/thumbnailImage"
-            android:layout_width="40dp"
+            android:layout_width="50dp"
             android:layout_below="@+id/relThumbnail"
-            android:layout_height="40dp"
-            android:layout_centerHorizontal="true"
+            android:layout_height="50dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
@@ -183,7 +181,7 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_play_btn" />
+                android:src="@drawable/ic_play_black_logo" />
 
             <ImageView
                 android:id="@+id/close"
@@ -199,7 +197,7 @@
                 android:layout_height="25dp"
                 android:layout_gravity="bottom"
                 android:layout_margin="5dp"
-                android:src="@drawable/unmute" />
+                android:src="@drawable/ic_unmute_black" />
 
             <ImageView
                 android:id="@+id/mute"
@@ -207,7 +205,7 @@
                 android:layout_height="25dp"
                 android:layout_gravity="bottom"
                 android:layout_margin="5dp"
-                android:src="@drawable/mute"
+                android:src="@drawable/ic_mute_black"
                 android:visibility="gone" />
 
             <TextView
